--- a/README.textile
+++ b/README.textile
@@ -3,4 +3,10 @@ h2. Rush
 I like the javascript SyntaxHighlighter written by Alex Gorbatchev 
 (http://alexgorbatchev.com/wiki/SyntaxHighlighter) by I didn't care 
 for the treatment of Ruby.  I decided to write my own Ruby "brush" 
-and a matching theme that is ruby centric.
+and a matching theme that is ruby-centric.
+
+* shBrushRuby.js - this file replaces the ruby brush in the "scripts" directory
+* shThemeRush.css - add this file to the "styles" directory
+* highlighter-test.html - I used this to see how the brush/theme looked
+
+ 
